tests/fixtures/grammar/negative/duplicate-module.asfl
module SYSTEM_A;
end_module
module SYSTEM_A;
end_module
